# nicla-vision-ripple-inferencing

./: .gitignore  CMakeLists.txt  README.md
cmake/: include_library.cmake  nicla_vision.cmake  toolchain.cmake
lib/ArduinoBLE/: CMakeLists.txt
lib/LSM6DSOX/: CMakeLists.txt
lib/Ripple_inferencing/: CMakeLists.txt  library.properties
lib/Ripple_inferencing/examples/esp32/esp32_camera/: esp32_camera.ino
lib/Ripple_inferencing/examples/esp32/esp32_fusion/: esp32_fusion.ino
lib/Ripple_inferencing/examples/esp32/esp32_microphone/: esp32_microphone.ino
lib/Ripple_inferencing/examples/esp32/esp32_microphone_continuous/: esp32_microphone_continuous.ino
lib/Ripple_inferencing/examples/nano_ble33_sense/nano_ble33_sense_accelerometer/: nano_ble33_sense_accelerometer.ino
lib/Ripple_inferencing/examples/nano_ble33_sense/nano_ble33_sense_accelerometer_continuous/: nano_ble33_sense_accelerometer_continuous.ino
lib/Ripple_inferencing/examples/nano_ble33_sense/nano_ble33_sense_camera/: nano_ble33_sense_camera.ino
lib/Ripple_inferencing/examples/nano_ble33_sense/nano_ble33_sense_fusion/: nano_ble33_sense_fusion.ino
lib/Ripple_inferencing/examples/nano_ble33_sense/nano_ble33_sense_microphone/: nano_ble33_sense_microphone.ino
lib/Ripple_inferencing/examples/nano_ble33_sense/nano_ble33_sense_microphone_continuous/: nano_ble33_sense_microphone_continuous.ino
lib/Ripple_inferencing/examples/nicla_sense/nicla_sense_fusion/: nicla_sense_fusion.ino
lib/Ripple_inferencing/examples/nicla_vision/nicla_vision_camera/: nicla_vision_camera.ino
lib/Ripple_inferencing/examples/nicla_vision/nicla_vision_fusion/: nicla_vision_fusion.ino
lib/Ripple_inferencing/examples/nicla_vision/nicla_vision_microphone/: nicla_vision_microphone.ino
lib/Ripple_inferencing/examples/nicla_vision/nicla_vision_microphone_continuous/: nicla_vision_microphone_continuous.ino
lib/Ripple_inferencing/examples/portenta_h7/portenta_h7_camera/: portenta_h7_camera.ino
lib/Ripple_inferencing/examples/portenta_h7/portenta_h7_microphone/: portenta_h7_microphone.ino
lib/Ripple_inferencing/examples/portenta_h7/portenta_h7_microphone_continuous/: portenta_h7_microphone_continuous.ino
lib/Ripple_inferencing/examples/static_buffer/static_buffer/: static_buffer.ino
lib/Ripple_inferencing/src/model-parameters/: model_metadata.h  model_variables.h
lib/Ripple_inferencing/src/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
scripts/: build  setup  upload
src/: CMakeLists.txt  main.cpp
